[gd_scene load_steps=18 format=2]

[ext_resource path="res://Fontes/OldWizard.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://Sons/Musia_Ambiente_Jam.mp3" type="AudioStream" id=3]
[ext_resource path="res://Imagens/PorDoSolMenu.png" type="Texture" id=4]
[ext_resource path="res://Animações/CameraAndLightZoom.tres" type="Animation" id=5]

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Animation" id=13]
resource_name = "Fade White"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 684, 381 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = -90.0
margin_right = 173.0
margin_bottom = 90.0

[node name="Iniciar" type="Button" parent="Menu"]
margin_right = 346.0
margin_bottom = 36.0
focus_neighbour_bottom = NodePath("../Opções")
custom_colors/font_color_hover = Color( 0.309804, 0.258824, 0.2, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Iniciar"
__meta__ = {
"_editor_description_": "INICIAR"
}

[node name="Opções" type="Button" parent="Menu"]
margin_top = 40.0
margin_right = 346.0
margin_bottom = 76.0
focus_neighbour_top = NodePath("../Iniciar")
focus_neighbour_bottom = NodePath("../MutarDesmutar")
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Opções"

[node name="MutarDesmutar" type="Button" parent="Menu"]
margin_top = 80.0
margin_right = 346.0
margin_bottom = 116.0
focus_neighbour_top = NodePath("../Opções")
focus_neighbour_bottom = NodePath("../Sair")
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
toggle_mode = true
text = "Mutar/Desmutar"

[node name="Sair" type="Button" parent="Menu"]
margin_top = 120.0
margin_right = 346.0
margin_bottom = 156.0
focus_neighbour_top = NodePath("../MutarDesmutar")
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "Sair"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CameraLightAndZoom = ExtResource( 5 )
"anims/Fade White" = SubResource( 13 )
anims/RESET = SubResource( 14 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -9.0
margin_top = 8.0
margin_right = 1369.0
margin_bottom = 764.0
mouse_filter = 2

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 684, 381 )
current = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -14.857
autoplay = true

[connection signal="pressed" from="Menu/Iniciar" to="." method="_on_Iniciar_pressed"]
[connection signal="pressed" from="Menu/MutarDesmutar" to="." method="_on_MutarDesmutar_pressed"]
[connection signal="pressed" from="Menu/Sair" to="." method="_on_Sair_pressed"]
